<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <ImageView
            android:id="@+id/image_home_logo"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:visibility="visible"
            app:srcCompat="@drawable/home_logo"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/text_home_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="50dp"
            android:text="@string/text_home_logo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/button_to_list_university"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/text_button_fak"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/button_to_list_university"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/button_to_test_vocational_guidance"
            android:background="@drawable/text_button_fak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/button_to_test_vocational_guidance"
            android:textSize="18sp" />

    </LinearLayout>
</FrameLayout>